# mozaia-laws-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mozaia_laws_mcp/: __init__.py  server.py
